--- a/css/progress.css
+++ b/css/progress.css
@@ -1,5 +1,6 @@
 .main-1{
     background-color: #f9f9f9;
+  
 }
 .main{
     display: flex;
@@ -21,6 +22,7 @@
 .wrapper2 {
     width: 50%;
     font-family: 'Roboto', sans-serif;
+    margin-left: 10%;
     
 }
 
@@ -111,6 +113,7 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    margin-bottom: 10px;
 }
 
 /* Hover effect */
