--- a/css/template.css
+++ b/css/template.css
@@ -545,6 +545,7 @@ strong {
   border: 1px solid var(--border-color);
   border-radius: var(--border-radius-medium);
   position: relative;
+  margin-top: 20px;
   overflow: hidden;
 }
 
