--- a/css/template.css
+++ b/css/template.css
@@ -545,8 +545,12 @@ strong {
   border: 1px solid var(--border-color);
   border-radius: var(--border-radius-medium);
   position: relative;
-  margin-top: 20px;
   overflow: hidden;
+
+  margin-top: 200px;
+  margin-bottom: 20px;
+  margin-right: 10px;
+  margin-left: 30px;
 }
 
 .profile-title {
@@ -577,7 +581,7 @@ strong {
 }
 
 .about-thumb {
-  padding-right: 20px;
+  padding-right: 10px;
   padding-left: 20px;
 }
 
