--- a/css/progress.css
+++ b/css/progress.css
@@ -53,14 +53,14 @@
 .skill-bar {
     width: 100%;
     height: 10px;
-    background: #f4392f;
+    background: #14b789;
     display: block;
     position: relative;
 }
 
 .skill-bar span {
     position: absolute;
-    border-top: 5px solid #f4392f;
+    border-top: 5px;
     top: -30px;
     padding: 0;
     font-size: 18px;
